--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     </head>
     <body>
         <h1>this is my business </h1>
+        <div class="container">
+            
+            <header>
+               
+            </header>
+        </Div>
     </body>
 </html>
