--- a/index.html
+++ b/index.html
@@ -12,5 +12,93 @@
                
             </header>
         </Div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Mr Oluwa Company</title>
+ <link rel="stylesheet" href="style.css">
+</head>
+<body>
+ <header>
+ <nav>
+ <ul>
+ <li><a href="#about">About</a></li>
+ <li><a href="#services">Services</a></li>
+ <li><a href="#testimonials">Testimonials</a></li>
+ <li><a href="#contact">Contact</a></li>
+ </ul>
+ </nav>
+ </header>
+ <section id="slider">
+ <h2>Welcome to Mr Oluwa Company</h2>
+ <div class="slides">
+ <img src="clyafyi2c00070cjld5f0csho.webp">
+ <img src="44865351-e9c2-4363-ab2c-7e31fc4c8b86_0_watermark.jpeg">
+ <img src="1753556662772.jpg">
+ </div>
+ </section>
+ <section id="about">
+ <h1>Mr Oluwa Company</h1>
+ <p>Leading Telecommunications Company in Ghana</p>
+ <p>Founded: 2020</p>
+ <p>Location: Kohiyili, Ghana</p>
+ </section>
+ <section id="services">
+ <h2>Our Services</h2>
+ <ul>
+ <li>Data Bundles</li>
+ <li>Telecoms Support</li>
+ <li>Fiber Optic Installation</li>
+ <li>Network Maintenance</li>
+ </ul>
+ </section>
+ <section id="testimonials">
+ <h2>What Our Clients Say</h2>
+ <div class="testimonials">
+ <blockquote>
+ <p>Mr Oluwa Company is the best telecoms company in Ghana!</p>
+ <cite>- John Doe</cite>
+ </blockquote>
+ <blockquote>
+ <p>Fast internet speeds and excellent customer service!
+<section id="faq">
+ <h2>Frequently Asked Questions</h2>
+ <div class="accordion">
+  <div class="accordion-item">
+   <button class="accordion-button">What is Mr Oluwa Company?</button>
+   <div class="accordion-content">
+    Mr Oluwa Company is a leading telecommunications company in Ghana.
+   </div>
+  </div>
+  <div class="accordion-item">
+   <button class="accordion-button">What services do you offer?</button>
+   <div class="accordion-content">
+    We offer data bundles, telecoms support, fiber optic installation, and network maintenance.
+   </div>
+  </div>
+ </div>
+</section>
+
+<button class="contact-button">Contact Us</button>
+<div class="modal" id="contact-modal">
+ <h2>Contact Us</h2>
+<b>www.tiktok.mroluwa.com</>
+ <form>
+  <label>Name:</label>
+  <input type="text" required placeholder="@e.g.Mensah yaw"><br><br>
+  <label>phone:</label>
+  <input type="number" required placeholder="@e.g.0557751280"><br><br>
+  <label>Email:</label>
+  <input type="email" required placeholder="@example oluwa1me@gmail.com"><br><br>
+  <button style="background: gold;">summit </button>
+  <script>
+   <link rel="main.js">
+  </script>
+ </form>
+</b>
+</body>
+</html>
     </body>
 </html>
