--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
  <section id="slider">
  <h2>Welcome to Mr Oluwa Company</h2>
  <div class="slides">
- <img src="clyafyi2c00070cjld5f0csho.webp">
- <img src="44865351-e9c2-4363-ab2c-7e31fc4c8b86_0_watermark.jpeg">
- <img src="1753556662772.jpg">
+Contact us: <rel link="oluwa1me@gmail.com >
  </div>
  </section>
  <section id="about">
