Update Web tech assignment home page.html

--- a/Web tech assignment home page.html
+++ b/Web tech assignment home page.html
@@ -121,6 +121,6 @@ color: yellow;
     </div>
     <br>
     <br>
-    <footer>@mr oluwa C&2025</footer>
+    <footer>@mr oluwa &copy;2025</footer>
 </body>
 </html>
