--- a/index.html
+++ b/index.html
@@ -1,87 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Mr Oluwa Company</title>
- <link rel="stylesheet" href="Oluwa.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>home page</title>
+    <style>
+        *{
+            padding: 0%;
+            margin: 0%;
+            text-align: center;
+            background-image: url(Wep.14.jpg);
+        }
+        div.logo{
+            text-align: center;
+        }
+        img{
+            border-radius: 200px;
+            padding: 10px;
+            margin: 10px;
+        }
+        li a{
+            color: black;
+            font-size: 20px;
+            text-transform: uppercase;
+            font-weight: bold;
+            margin-right: 30px;
+            padding-right: 10px;
+            transition: .3s linear;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+        li a:hover{
+            background-color: yellowgreen;
+           text-decoration: yellow; color: aqua;
+            font-size: 30px;
+        }
+        ol{
+            background-color: yellowgreen;
+           text-decoration: yellow; color: aqua;
+            font-size: 30px; 
+            list-style-type: armenian;
+            display: block;
+        }
+        div.logo:hover{
+            background-color: rgb(162, 226, 43);
+            color: chocolate;
+            font-size: 30px;
+
+        }
+        b:hover{
+            font-size: 40px;
+            color: aqua;
+            background: crimson;
+        }
+        h2:hover{
+            text-transform: uppercase;
+            font-size: 30PX;
+            color: hsl(0, 95%, 46%);
+        }
+        footer:hover{
+            text-transform: uppercase;
+            font-size: 30PX;
+            color: hsl(0, 95%, 46%);
+        }
+        h1:hover{
+            font-size: 40px;
+            text-align: center; 
+            background-color: hsl(140, 94%, 47%); 
+            border-radius: 10px;
+color: yellow;
+        }
+        h1{
+            text-align: center; 
+            background: gold; 
+            border-radius: 10px;
+        }
+        h3{
+            font-size: 40px;
+            text-align: center; 
+            background-color: hsl(140, 94%, 47%); 
+            border-radius: 10px;
+            color: yellow;
+        }
+        h4:hover{
+            font-size: 40px;
+            text-align: center;  
+            border-radius: 10px;
+            color: yellow;
+        }
+    </style>
 </head>
 <body>
- <header>
- <nav>
- <ul>
- <li><a href="#about">About</a></li>
- <li><a href="#services">Services</a></li>
- <li><a href="#testimonials">Testimonials</a></li>
- <li><a href="#contact">Contact</a></li>
- </ul>
- </nav>
- </header>
- <section id="slider">
- <h2>Welcome to Mr Oluwa Company</h2>
- <div class="slides">
- </div>
- </section>
- <section id="about">
- <h1>Mr Oluwa Company</h1>
- <p>Leading Telecommunications Company in Ghana</p>
- <p>Founded: 2020</p>
- <p>Location: Kohiyili, Ghana</p>
- </section>
- <section id="services">
- <h2>Our Services</h2>
- <ul>
- <li>Data Bundles</li>
- <li>Telecoms Support</li>
- <li>Fiber Optic Installation</li>
- <li>Network Maintenance</li>
- </ul>
- </section>
- <section id="testimonials">
- <h2>What Our Clients Say</h2>
- <div class="testimonials">
- <blockquote>
- <p>Mr Oluwa Company is the best telecoms company in Ghana!</p>
- <cite>- John Doe</cite>
- </blockquote>
- <blockquote>
- <p>Fast internet speeds and excellent customer service!
-<section id="faq">
- <h2>Frequently Asked Questions</h2>
- <div class="accordion">
-  <div class="accordion-item">
-   <button class="accordion-button">What is Mr Oluwa Company?</button>
-   <div class="accordion-content">
-    Mr Oluwa Company is a leading telecommunications company in Ghana.
-   </div>
-  </div>
-  <div class="accordion-item">
-   <button class="accordion-button">What services do you offer?</button>
-   <div class="accordion-content">
-    We offer data bundles, telecoms support, fiber optic installation, and network maintenance.
-   </div>
-  </div>
- </div>
-</section>
-
-<button class="contact-button">Contact Us</button>
-<div class="modal" id="contact-modal">
- <h2>Contact Us</h2>
-<b>www.tiktok.mroluwa.com</>
- <form>
-  <label>Name:</label>
-  <input type="text" required placeholder="@e.g.Mensah yaw"><br><br>
-  <label>phone:</label>
-  <input type="number" required placeholder="@e.g.0557751280"><br><br>
-  <label>Email:</label>
-  <input type="email" required placeholder="@example oluwa1me@gmail.com"><br><br>
-  <button style="background: gold;">summit </button>
-  <script>
-   <link rel="main.js">
-  </script>
- </form>
-</b>
+    <h1>welcome to the home page<br> of my assinment</h1>
+    <div class="nav">
+        <nav class="navbar">
+            <div class="nav-box">
+                <div class="logo">
+                    <a href="https://mroluwawebpage.netlify.app/"><img src="IMG-20250325-WA0020.jpg"  width="50%" height="50%" ><br>visit my first webpage</a></div>
+                    <br>
+                    <h2>below is my INDEX NUMBER <br>but you can click it section to see all my details</h2>
+                    <b><h1>DTIT240044</h1></b>
+                    <br>
+                    <h3>Question:</h3><br>
+                    <h4>code webpages of the following courses displaying <br>
+                        their course outline and link them to each other
+                    <ol>
+                        <li>WEB TECH</li><br>
+                        <li>C++</li><br>
+                        <li>CALCULUS</li>
+                    </ol>
+                    </h4>
+                <div class="menu">
+                    <ul style="list-style: circle;">
+                        <li><a href="ASSIGNMENT.html">ASSIGNMENT  SECTION</a></li>
+                        <li><a href="index number.html">INDEX  NUMBER  SECTION</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <br>
+    <br>
+    <footer>@mr oluwa &copy;2025</footer>
 </body>
-</html>
-    </body>
 </html>
